fpm_pool_template commented out memory limit

--- a/buckhill-wcm/fpm_pool_template.conf
+++ b/buckhill-wcm/fpm_pool_template.conf
@@ -27,7 +27,7 @@ php_admin_value[sendmail_path] = /usr/sbin/sendmail -t
 ;php_flag[display_errors] = on
 php_admin_value[error_log] = /var/log/php_error.log
 php_admin_flag[log_errors] = on
-php_admin_value[memory_limit] = 32M
+;php_admin_value[memory_limit] = 32M
 ;php_admin_value[doc_root] = /htdocs/
 ;php_admin_value[cgi.fix_pathinfo] = 0
 ;php_admin_value[mail.log] = /tmp/php_mail.log
